[tool.poetry]
name = "agent-log"
version = "0.1.0"
description = ""
authors = ["Daniel Lima <danielufpa2013@gmail.com>"]
readme = "README.md"
packages = [{include = "agent_log"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.6"
langchain-core = "^0.3.44"
langchain-openai = "^0.3.8"
langgraph = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
